# firebolt-demo

./: .gitignore  .gitmodules  CNAME  LICENSE  README.md  index.html
.github/workflows/: gh-pages.yml
Dreambolt/: .gitignore  .venv_lock.txt  CHANGELOG.md  DEMO-DISCLAIMER.md  PLAN.md  README.md  WorldCupPlayers.dreambolt.parquet  __main__.py  cli.py  cli_working.py  env.template  firebolt_core.py  firebolt_io.py  firebolt_io_simple.py  ingest.py  ingest_simple.py  requirements.txt  synth.py  synth_simple.py  test_data.csv  test_data.dreambolt.parquet  testing.md  verify_critical_fixes.py
Dreambolt/.github/workflows/: tests.yml
Dreambolt/docs/: ARCHITECTURE.md  ER.md  custom_steps.md
Dreambolt/reports/: cleanup_summary.md  cli_failures.md  cli_golden_runs.json  cli_surgery_report.md  command_execution_results.json  command_inventory.json  critical_fix_summary.md  deep_regression_summary.md  failures.md  feature_failures.md  lock_snapshot.txt  s3_disabled_paths.md  s3_reintegration_summary.md  test_gap_matrix.md  test_suite_summary.md  typer_py313_breakage.md  typer_surgeon_summary.md
Dreambolt/src/: __init__.py
Dreambolt/src/utils/: __init__.py  s3_client.py
Dreambolt/tests/: conftest.py  test_cli_comprehensive.py  test_cli_examples.py  test_cli_helper_functions.py  test_cli_version_matrix.py  test_documented_commands.py  test_firebolt_comprehensive.py  test_ingest.py  test_ingest_comprehensive.py  test_s3_basic.py  test_s3_comprehensive.py  test_synthesis_comprehensive.py
Fireblast/: .gitignore  README.md  requirements.txt  streamlit_app.py
Fireblast/data/: apps_to_use.csv
Fireblast/data/output/: qps_results_20250626_145112.json  qps_results_20250702_125757.json  qps_results_20250702_130118.json  qps_results_20250702_130504.json  qps_results_20250702_132938.json  qps_results_20250702_133125.json  qps_results_20250702_133541.json  qps_results_20250702_134243.json  qps_results_20250702_134800.json  qps_results_20250702_135255.json  qps_results_20250702_135343.json
Fireblast/queries/: aggregation_queries.sql  analytical_queries.sql  point_lookups.sql
FlappyFirebolt/: README.md
benchmarks/: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt
benchmarks/.github/workflows/: ci.yml  release.yml
benchmarks/benchmarks/FireScale/: warmup.sql
benchmarks/benchmarks/FireScale/firebolt/: setup.sql  warmup.sql
benchmarks/benchmarks/FireScale/redshift/: warmup.sql
benchmarks/benchmarks/FireScale/snowflake/: warmup.sql
benchmarks/config/: settings.py
benchmarks/scripts/: run-k6.sh  run-python.sh  security-scan.sh  setup.sh  test-all.sh  validate-env.sh
benchmarks/src/k6/: connections-server.js
benchmarks/src/python/: requirements.txt
benchmarks/src/python/src/: env_config.py  main.py  runner.py
benchmarks/src/python/src/connectors/: base.py  bigquery.py  firebolt.py  redshift.py  snowflake.py
benchmarks/tests/: __init__.py  conftest.py
benchmarks/tests/fixtures/: README.md  sample_queries.sql
benchmarks/tests/integration/: test_benchmark_integration.py
benchmarks/tests/unit/: test_connectors.py  test_env_config.py  test_runner.py
debezium-cdc/: DEMO-DISCLAIMER.md  Demo - Postgres CDC Sync to Firebolt.md  README.md  env.example  setup_database.sql
debezium-cdc/fake-sports-data/: ingest_data.js  insert_fake_data.js  package-lock.json  package.json
debezium-cdc/set-up/: docker-compose.yml  firebolt-sink-connector.json  source-connector.json
debezium-cdc/streamlit/: requirements.txt  streamlitui.py
fb-adtech/: .gitignore  DEMO-DISCLAIMER.md
fb-adtech/sql/1 adtech set-up/: 1create_external_tables.sql  2create_firebolt_tables.sql  3create_aggregating_indexes.sql  4insert_data.sql
fb-adtech/sql/2 adtech readiness/: 5warmup.sql
fb-adtech/sql/3 adtech demo/: 6analytical query.sql
fb-adtech/streamlit-demo-data-app/: README.md  requirements.txt  streamlit_app.py
fb_ai_demo/: README.md  chainlit.md
fb_ai_demo/.chainlit/: config.toml
fb_ai_demo/public/: vega-loader.js
fb_ai_demo/public/elements/: editor.jsx  query.jsx
fb_ai_demo/src/: app.py  firebolt_connection.py
fb_ai_demo_backup/: .gitignore  requirements.txt
fb_ai_demo_backup/public/: theme.json
fb_ai_demo_backup/src/: system_prompt.md  tools.py
firebolt-core/: README.md
firebolt-core/app/: streamlit_app.py
geospatial/: README.md  geospatial.sql  index.html
geospatial-application-demo/: .env  .gitignore  README.md  app.py  mapbox_token.txt
kafka-cdc/: README.md  docker-compose.yml  generate_data.py  requirements.txt  sink-connector.json  source-connector.json
